fixed text alignment

--- a/css/home.css
+++ b/css/home.css
@@ -148,6 +148,7 @@ li {
 .slide-card {
     width: 83.33333333%;
     margin: 20px auto;
+    text-align: center;
 }
 
 .justify-text {
